# brain-mri-regression

./: .gitignore  LICENSE  Makefile  README.md  all_model_results.csv  best_params_gp_6_10.json  best_params_nn_full.json  best_params_xgb.json  best_params_xgb_7_10.json  best_params_xgb_7_10_second.json  best_params_xgb_7_10_third.json  best_params_xgb_for_sure.json  best_params_xgb_lars.json  eda.ipynb  main.py  optuna_study.db  pyproject.toml  train.py
brainage/: config.py  dataset.py  feature_selection.py  imputation.py  io.py  outlier_detection.py  plots.py  runner.py  utils_optuna.py  utils_wandb.py
brainage/modeling/: predict.py  train.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
cosinecows/: config.py  dataset.py  feature_selection copy.py  feature_selection.py  imputation.py  io.py  outlier_detection.py  plots.py  runner.py  utils_optuna.py  utils_wandb.py
cosinecows/modeling/: predict.py  train.py
data/: optuna_study.db  y_train.csv
notebooks/: 02-jmm-plot-csv.ipynb  03-jmm-outliers.ipynb  eda.ipynb
reports/: best-impKnn-outlierPcaIsofor-featSelect-stacking.csv  best_params_stacker.json  comp-outlier-impute-iterative.csv  comp-outlier-impute-knn.csv  optuna_study.db
scripts/: generate_interim.py
