[project]
name = "aml-project-1"
version = "0.1.0"
description = "Regression task on features of RMI scan to predict brain age"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pyod>=2.0.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "wandb>=0.22.2",
    "xgboost>=3.1.1",
]
