[project]
name = "aml-project-1"
version = "0.1.0"
description = "Regression task on features of RMI scan to predict brain age"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "ipympl>=0.9.8",
    "joblib>=1.5.2",
    "jupyterlab>=4.4.10",
    "jupyterlab-widgets>=3.0.16",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "optuna-dashboard>=0.19.0",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "plotly>=6.3.1",
    "pyod>=2.0.5",
    "pytorch-tabnet>=4.1.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "skorch>=1.2.0",
    "torch>=2.9.0",
    "torchmetrics>=1.8.2",
    "wandb>=0.22.2",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "scipy-stubs>=1.16.3.0",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cosinecows"
module-root = ""
